# scope

./: .gitignore  Anchor.toml  Cargo.toml  DEPLOY.md  Makefile  README.md  TODO.md  package.json  tsconfig.json
.github/scripts/: get-node-build-version.sh  set-cargo-build-versions.sh  update-local-chart.sh
.github/workflows/: bot-scope-docker-build.yml  prettier.yml  rust.yml  soteria.yml  ts-integration.yaml
configs/devnet/: hubble.json
configs/localnet/: hubble.json
configs/mainnet/: hubble.json
crank/crank/: Cargo.toml
crank/crank/src/: main.rs
docs/: release_0.3.0.md  release_0.3.1.md  release_0.4.0.md  release_0.4.1.md
keys/localnet/: mock_oracles.json  owner.json  scope.json
off_chain/crank/: Cargo.toml
off_chain/crank/src/: main.rs  scope_client.rs  utils.rs
off_chain/docker-bot/: .dockerignore  .helmignore  Dockerfile  Makefile  docker-entrypoint.sh
off_chain/docker-bot/helm/: Chart.yaml  values.yaml
off_chain/orbit-link/: Cargo.toml  Readme.md
off_chain/orbit-link/src/: consts.rs  errors.rs  lib.rs  tx_builder.rs
off_chain/orbit-link/src/async_client/: banks_client.rs  mod.rs  rpc_client.rs
off_chain/scope-cli/: Cargo.toml
off_chain/scope-cli/src/: cluster_parse.rs  lib.rs  main.rs  scope_client.rs  utils.rs  webserver.rs
off_chain/scope-cli/src/config/: mapping.rs  mod.rs  scope_config.rs  token_config.rs  utils.rs
off_chain/scope-cli/src/oracle_helpers/: ktokens.rs  mod.rs  single_account_oracle.rs  yi_token.rs
off_chain/scope-cli/src/web/: routes.rs  server.rs
programs/crank/: Cargo.toml
programs/crank/src/: lib.rs
programs/mock_oracles/: Cargo.toml  build.rs
programs/mock_oracles/src/: ctokens.rs  lib.rs  pc.rs  spl_stake.rs
programs/oracle/: Cargo.toml
programs/oracle/src/: lib.rs
programs/pyth/: Cargo.toml  build.rs
programs/pyth/src/: lib.rs  pc.rs
programs/scope/: Cargo.toml  build.rs
programs/scope/proptest-regressions/utils/: switchboard_v2.txt
programs/scope/src/: lib.rs  program_id.rs
programs/scope/src/handlers/: handler_initialize.rs  handler_refresh_prices.rs  handler_update_mapping.rs  handler_yitoken_prices.rs  mod.rs
programs/scope/src/oracles/: ctokens.rs  ktokens.rs  mod.rs  pyth.rs  pyth_ema.rs  spl_stake.rs  switchboard_v1.rs  switchboard_v2.rs  yitoken.rs
programs/scope/src/oracles/ktokens/: kamino.rs  mod.rs  orca_state.rs
programs/scope/src/utils/: ctokens.rs  mod.rs  pyth.rs  scope_chain.rs  spl_stake.rs  switchboard_v1.rs  switchboard_v2.rs  tests_utils.rs  yitoken.rs
programs/scope/tests/: tests_security_init.rs  tests_security_refresh_list.rs  tests_security_refresh_one.rs  tests_security_update_mapping.rs
programs/scope/tests/common/: fixtures.rs  mod.rs  operations.rs  runner.rs  setup.rs  types.rs  utils.rs
programs/scope/tests/common/mock_oracles/: ktoken.rs  mod.rs  pyth.rs  switchboard_v2.rs
programs/scope/types/: Cargo.toml
programs/scope/types/src/: lib.rs
programs/test_cpi_caller/: Cargo.toml
programs/test_cpi_caller/src/: lib.rs
programs/yvaults_stub/: Cargo.toml
programs/yvaults_stub/src/: lib.rs
tests/: bot_utils.ts  global.ts  mock_account_utils.ts  oracle.ts  pyth_utils.ts  test_crank.ts  test_oracle_operation.ts  test_switchboard.ts  test_yi_token.ts  utils.ts
tests/oracle_utils/: ctokens.ts  mock_oracles.ts  pyth.ts  spl_stake.ts  switchboard_v1.ts  switchboard_v2.ts  yitokens.ts
