[workspace]
members = [
    "programs/*",
    "programs/scope/types",
    "off_chain/scope-cli",
    "off_chain/orbit-link"
]
resolver = "2"

[profile.dev]
overflow-checks = true

[profile.release]
lto = "thin"
overflow-checks = true

[patch.crates-io]
mpl-token-metadata = {git = 'https://github.com/hubbleprotocol/metaplex-program-library', branch="restore-v2-interface"}
