[package]
name = "crank"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serum-common = { path = "../common", features = ["client"] }
solana-sdk = "1.7.11"
anyhow = "1.0.32"
solana-client = "1.7.11"
borsh = "0.9.1"
solana-shadow = { path = "../solana-shadow" }
tracing-subscriber = "0.2"
pyth-client = "0.2.2"
tokio = { version = "1.12", features = ["full"] }
tokio-tungstenite = { version = "0.15", features = ["native-tls"] }
chrono = "0.4.19"