[package]
name = "scope-cli"
version = "0.2.0-SNAPSHOT"
edition = "2021"
authors = ["Olivier Eblé <olivier@eble.fr>"]
description = "Cli to setup the Scope program and trigger autorefresh of the prices"

[[bin]]
name = "scope"
path = "src/main.rs"
required-features = ["rpc-client"]

[lib]
name = "scope_client"
path = "src/lib.rs"

[features]
default = ["rpc-client", "yvaults"]
rpc-client = ["orbit-link/rpc-client"]
banks-client = ["orbit-link/banks-client"]
yvaults = ["scope/yvaults"]

[dependencies]
anchor-client = "0.26.0"
scope = { path = "../../programs/scope", default-features = false, features = ["no-entrypoint"] }
anyhow = "1.0.0"
clap = { version = "3.2.11", features = ["derive", "env", "wrap_help"] }
serde = "1.0.136"
serde_json = "1.0.79"
tracing = "0.1.10"
tracing-subscriber = { version = "0.3.9", features = ["std", "fmt", "json"] }
tokio = "1.14.1"
warp = "0.3.3"
nohash-hasher = "0.2.0"
orbit-link = { path = "../orbit-link" }
async-trait = "0.1.51"
futures = "0.3.18"
