[package]
name = "crank"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serum-common = { path = "../common", features = ["client"] }
solana-sdk = "1.6.18"
anyhow = "1.0.32"
solana-client = "1.6.18"
borsh = "0.9.1"
