[package]
name = "mock_oracles"
version = "0.1.0"
description = "Pyth oracle interface implementation in anchor"
edition = "2018"
license = "Apache-2.0"
authors = ["Synthetify Labs <contact@synthetify.io>"]

[lib]
crate-type = ["cdylib", "lib"]
name = "mock_oracles"
doctest = false

[features]
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]
mainnet = []
testnet = []
devnet = []
localnet = []
default = ["localnet"]

[dependencies]
anchor-lang = "0.18.2"
arrayref = "0.3.6"
bytemuck = { version = "1.7.2" }
switchboard-program = "=0.2.0"
switchboard-v2 = "0.1.3"
borsh = "=0.9.0"
quick-protobuf = "=0.8.0"
solend-program = { git = "https://github.com/solendprotocol/solana-program-library", features = [
    "no-entrypoint",
] }

[build-dependencies]
serde = "1.0.136"
serde_json = "1.0.79"
anyhow = "1.0.54"
