[package]
name = "scope"
version = "0.1.0"
description = "Scope is Hubble's oracle aggregator"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "scope"

[features]
no-entrypoint = []
cpi = ["no-entrypoint"]
skip_price_validation = []

# If none of the following is set, one will be selected based on env $CLUSTER variable
# If $CLUSTER is not set either, default will be mainnet
devnet = ["skip_price_validation"]
localnet = []
mainnet = []

[dependencies]
anchor-lang = "0.25.0"
anchor-spl = { version = "0.25.0", features = ["token"] }
num_enum = "0.5.7"
pyth-sdk-solana = "0.4.2"
cfg-if = "1.0.0"
serde = "1.0.136"
switchboard-program = "0.2.0"
spl-stake-pool = { version = "0.6.3", features = ["no-entrypoint"] }
arrayref = "0.3.6"
decimal-wad = { git = "https://github.com/hubbleprotocol/decimal-wad", branch = "downscale-uint" }
rust_decimal = "1.18.0"

[dev-dependencies]
proptest = "1.0"
