[package]
name = "scope"
version = "0.1.0"
description = "Scope is Hubble's oracle aggregator"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "scope"

[features]
no-entrypoint = []
cpi = ["no-entrypoint"]
skip_price_validation = []
test-bpf = []
debug = []

# If none of the following is set, one will be selected based on env $CLUSTER variable
# If $CLUSTER is not set either, default will be mainnet
default = ["yvaults"]
yvaults = ["dep:yvaults"]
devnet = ["skip_price_validation"]
localnet = []
mainnet = []

[dependencies]
anchor-lang = "0.26.0"
solana-program = "1.14.15"
num_enum = "0.5.7"
num = "0.4"
pyth-sdk-solana = "0.4.2"
cfg-if = "1.0.0"
serde = "1.0.136"
switchboard-program = "0.2.0"
spl-stake-pool = { version = "0.6.3", features = ["no-entrypoint"] }
arrayref = "0.3.6"
decimal-wad = "0.1.7"
rust_decimal = "1.18.0"
strum = { git = "https://github.com/hubbleprotocol/strum", features = ["derive"], branch = "checked_arithmetics" }
# Comment out the line below if you do not have access to the yvaults repo
yvaults = { git = "ssh://git@github.com/hubbleprotocol/yvaults.git", features = ["no-entrypoint", "cpi", "mainnet"], optional = true }
mpl-token-metadata = { version = "1.12.0", features = ["no-entrypoint"]}
# Uncomment the line below if you do not have access to the yvaults repo
#yvaults = { path = "../yvaults_stub", package = "yvaults_stub", optional = true }
bytemuck = "1.4.0"
sha2 = "0.10.0"
num-traits = "0.2.15"
num-derive = "0.3.3"

[dev-dependencies]
async-recursion = "1.0.5"
proptest = "1.0"
solana-logger = "1.14.15"
solana-program-test = "1.14.15"
solana-sdk = "1.14.15"
thiserror = "1.0.38"
test_cpi_caller = { path = "../test_cpi_caller" }
